ui: Fix regression with margin above app title
- This extra margin was accidentally introduced when migrating to Bootstrap 5
and a generic rule was introduced to add spacing before each section that is not
the first one.

Tests:

- In app pages, icon and title are at the same level.

--- a/static/themes/default/css/main.css
+++ b/static/themes/default/css/main.css
@@ -873,8 +873,9 @@ input[type='submit'].running-status-button {
     width: 100%;
 }
 
-.app-description {
+section.app-description {
     grid-column: 2;
+    margin-top: 0;
 }
 
 .app-header-single-column  {
